fix "import script" button hiding the overflow tab dropdown

--- a/css/earsketch/styles.less
+++ b/css/earsketch/styles.less
@@ -179,7 +179,7 @@ button:focus {
 }
 
 .btn-floating {
-  z-index: 100;
+  z-index: 40;
   border-color: @gen-action;
   border-style: solid;
   border-width: 1px;
